--- a/.github/workflows/media_lint.yaml
+++ b/.github/workflows/media_lint.yaml
@@ -19,7 +19,7 @@ jobs:
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
         run: npm ci
-        working-directory: media
+        working-directory: components/media
 
       - name: Run linters
         uses: wearerequired/lint-action@v1
