Build and run with vite instead of webpack

--- a/ui/Makefile
+++ b/ui/Makefile
@@ -1,5 +1,5 @@
 
-.PHONY: default init build watch serve dev
+.PHONY: default init build dev
 
 default: build
 
@@ -10,12 +10,6 @@ init: node_modules
 
 build: node_modules
 	npm run build
-
-watch: node_modules
-	npm run watch
-
-serve: node_modules
-	npm run serve
 
 dev: node_modules
 	npm run dev
