--- a/ui/package.json
+++ b/ui/package.json
@@ -1,54 +1,33 @@
 {
-  "name": "screencrash-ui",
+  "name": "ui_new",
+  "private": true,
   "version": "0.0.0",
-  "description": "Repository for the UI of Screencrash (also known as Skärmkrock)",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node_modules/.bin/webpack",
-    "watch": "node_modules/.bin/webpack --watch",
-    "serve": "node_modules/.bin/browser-sync start --config browser-sync.config.js",
-    "dev": "node_modules/.bin/npm-run-all --parallel watch serve"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kulturkrock/screencrash-ui.git"
-  },
-  "author": "Kulturkrock",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/kulturkrock/screencrash-ui/issues"
-  },
-  "homepage": "https://github.com/kulturkrock/screencrash-ui#readme",
   "dependencies": {
-    "@types/d3": "^5.7.2",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-pdf": "^5.0.2",
-    "@typescript-eslint/eslint-plugin": "^3.6.0",
-    "@typescript-eslint/parser": "^3.6.0",
-    "browser-sync": "^2.26.7",
-    "css-loader": "^3.3.2",
-    "d3": "^5.16.0",
-    "eslint": "^7.4.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.3",
-    "file-loader": "^4.3.0",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
-    "less-plugin-autoprefix": "^2.0.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-icons": "^4.3.1",
-    "react-pdf": "^5.3.0",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.3",
-    "url-loader": "^4.1.1",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10"
+    "d3": "^7.9.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-pdf": "^9.2.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "less": "^4.2.2",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.18.2",
+    "vite": "^6.0.5"
   }
 }
