Add a new target "test"

--- a/core/Makefile
+++ b/core/Makefile
@@ -1,12 +1,18 @@
-.PHONY: default init dev
+.PHONY: default init dev test
 
-default: init dev
+default: init dev test
 
 init:
 	pdm install
 
+# This reloads the app when Python files change.
 dev: init
 	pdm run watchmedo auto-restart \
 		--patterns="*.py" \
 		--recursive \
 		python -- src/main.py
+
+# This won't reload the app when Python files change.
+# (You can try this if you can't get "make dev" to work.)
+test: init
+	pdm run -- src/main.py
